Gradle: Use GraalVM's native build tools plugin
The advantage of GraalVM's native build tools plugin [1] over Palantir's
plugin is that reflection metadata is automatically downloaded and
Gradle's native toolchain mechanism [2] is used (via the Foojay Toolchains
Plugin [3]) to bootstrap GraalVM. By default, it uses the latest GraalVM
release for the language version of the JVM that runs the Gradle build.

[1]: https://graalvm.github.io/native-build-tools/latest/gradle-plugin.html
[2]: https://docs.gradle.org/current/userguide/toolchains.html
[3]: https://github.com/gradle/foojay-toolchains

Signed-off-by: Sebastian Schuberth <sschuberth@gmail.com>